gradle is now able to use local maven repo

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
 
 android {
     compileSdkVersion 26
@@ -32,9 +33,24 @@ android {
     lintOptions {
         abortOnError false
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
+//---------------------------------------------------------------------------//
+// Configuration                                                             //
+//---------------------------------------------------------------------------//
+
+group = 'org.radarcns'
+ext.moduleName = 'radar-android-actigraphlink'
+ext.githubUrl = 'https://github.com/thehyve/RADAR-Android-ActiGraphLink.git'
+ext.moduleDescription = 'ActiGraph Link plugin for RADAR passive remote monitoring app'
+version = android.defaultConfig.versionName
+
 repositories {
+    mavenLocal()
     jcenter()
 }
 
@@ -43,12 +59,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile(name: 'agdevicelibrary-release', ext: 'aar')
     compile 'org.radarcns:radar-commons-android:0.2.1'
-    // TODO: Fix me
-    compile files('../RADAR-Schemas/java-sdk/radar-schemas-commons/build/libs/radar-schemas-commons-0.1.jar')
+    compile 'org.radarcns:radar-schemas-commons:0.1'
 }
 
 repositories {
     flatDir {
         dirs 'libs'
+    }
+}
+
+uploadArchives {
+    repositories {
+        mavenLocal()
     }
 }
