--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile(name: 'agdevicelibrary-release', ext: 'aar')
     compile 'org.radarcns:radar-commons-android:0.2.1'
-    compile 'org.radarcns:radar-schemas-commons:0.1'
+    compile 'org.radarcns:radar-schemas-commons:0.2-alpha.1'
 }
 
 repositories {
