--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.radarcns.android.actigraphlink" >
+          package="org.radarcns.actigraphlink" >
 
     <application android:allowBackup="true">
         <service android:name=".ActiGraphLinkService"/>
