--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 26
@@ -58,8 +59,6 @@ repositories {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:26.0.1'
-    // installed with mvn install:install-file -Dfile=libs/agdevicelibrary-release.aar -Dgroup=actigraph -DartifactId=agdevicelibrary -Dversion=release -Dpackaging=aar
-    // TODO: make a part of the gradle build
     compile 'actigraph:agdevicelibrary:release@aar'
     compile 'org.radarcns:radar-commons-android:0.2.1'
     compile 'org.radarcns:radar-schemas-commons:0.2-alpha.1'
@@ -68,6 +67,26 @@ dependencies {
 uploadArchives {
     repositories {
         mavenLocal()
+    }
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId 'actigraph'
+            artifactId 'agdevicelibrary'
+            version 'release'
+
+            artifact 'libs/agdevicelibrary-release.aar'
+        }
     }
 }
 
